# django_tg_bot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
telegram_bot/admin_panel/: consumers.py  models.py  routing.py  urls.py  views.py
telegram_bot/admin_panel/migrations/: 0001_initial.py  0002_remove_group_max_member_count_and_more.py  0003_alter_scheduledmessage_image.py  0004_alter_scheduledmessage_image.py
telegram_bot/admin_panel/static/css/: admin_panel.css
telegram_bot/admin_panel/static/js/: admin_panel.js
telegram_bot/admin_panel/templates/: active_groups.html  admin_panel.html  admins.html  base.html  group_details.html  scheduled_messages.html  search_results.html
telegram_bot/bot_app/: bot.py
telegram_bot/bot_app/components/: admin.py  group.py  scheduled_messages.py
telegram_bot/bot_app/services/: admin_service.py  group_service.py  message_service.py
telegram_bot/telegram_bot/: asgi.py  settings.py  urls.py  wsgi.py
