[project]
name = "telegram-bot"
version = "0.1.0"
description = "telegram bot with admin panel"
authors = [
    {name = "Vitalyi",email = "evciu97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "python-telegram-bot[job-queue] (>=21.11.1,<22.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "channels (>=4.2.0,<5.0.0)",
    "websockets (>=15.0,<16.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "cloudinary (>=1.42.2,<2.0.0)",
    "django-cloudinary-storage (>=0.3.0,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
